--- a/Ullet App/pubspec.yaml
+++ b/Ullet App/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  material_design_icons_flutter: 6.0.7096
+  fluttertoast: ^8.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
